[gd_scene load_steps=12 format=2]

[ext_resource path="res://New Man Sprite/Screenshot_2023-02-01_at_5.57.55_PM-removebg-preview.png" type="Texture" id=1]
[ext_resource path="res://Actors/Player.gd" type="Script" id=2]
[ext_resource path="res://New Man Sprite/Screenshot_2023-02-01_at_5.57.34_PM-removebg-preview.png" type="Texture" id=3]
[ext_resource path="res://New Man Sprite/Screenshot_2023-02-01_at_5.57.15_PM-removebg-preview.png" type="Texture" id=4]
[ext_resource path="res://New Man Sprite/Screenshot_2023-02-01_at_5.57.11_PM-removebg-preview.png" type="Texture" id=5]
[ext_resource path="res://New Man Sprite/Screenshot_2023-02-01_at_5.57.43_PM-removebg-preview.png" type="Texture" id=6]
[ext_resource path="res://New Man Sprite/Screenshot_2023-02-01_at_5.57.24_PM-removebg-preview.png" type="Texture" id=7]
[ext_resource path="res://New Man Sprite/Screenshot_2023-02-01_at_5.57.39_PM-removebg-preview.png" type="Texture" id=8]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 3 ), ExtResource( 8 ), ExtResource( 6 ) ],
"loop": true,
"name": "WalkLeft",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 7 ) ],
"loop": true,
"name": "WalkRight",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 40, 41 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 46, 43 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 8
script = ExtResource( 2 )

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 3 )
animation = "Idle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -176 )
current = true
limit_left = 0
limit_top = 0
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 7.0
drag_margin_left = 0.0
drag_margin_right = 0.0

[node name="EnemyDetector" type="Area2D" parent="."]
modulate = Color( 0.0470588, 0.286275, 0.698039, 1 )
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetector"]
shape = SubResource( 2 )

[connection signal="area_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_area_entered"]
[connection signal="body_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_body_entered"]
